force-app/main/default/objects/Form_Builder__Payment_Data__c/fields/Form_Builder__CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__CreatedAt__c</fullName>
    <label>CreatedAt</label>
    <type>DateTime</type>
</CustomField>