force-app/main/default/objects/Form_Builder__Payment_Data__c/fields/Form_Builder__Submission__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission</label>
    <referenceTo>Form_Builder__MySubmission__c</referenceTo>
    <relationshipLabel>Payment Data</relationshipLabel>
    <relationshipName>Payment_Data</relationshipName>
    <type>Lookup</type>
</CustomField>