force-app/main/default/objects/Form_Builder__Payment_Data__c/fields/Form_Builder__Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Builder__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upon Payment</fullName>
            </value>
            <value>
                <fullName>IPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>